worked on the CQRS Design Pattern